--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ asgiref==3.5.2
 dj-database-url==2.1.0
 Django==4.1
 django-heroku==0.3.1
+gunicorn==21.2.0
+packaging==23.2
+pillow==10.2.0
 pip==23.3.1
 psycopg2==2.9.9
 python-decouple==3.8
